switch to primer css

--- a/src/webtrack.css
+++ b/src/webtrack.css
@@ -1,3 +1,4 @@
+/*
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 * {
@@ -8,22 +9,30 @@ body {
     padding: 30px;
 }
 
+#mainVideo {
+    width: 70%;
+}
+*/
+
+@media only screen and (max-width: 600px) {
+    #mainVideo {
+        width: 100%;
+    }
+}
+
+
 #mainCanvas, #mainVideo{
     position: absolute;
     top: 0px;
     left: 0px;
 }
 
-#mainVideo {
-    width: 70%;
+
+table {
+    display: block;
+    height: 200px;
+    overflow-y: scroll;
 }
-
-@media only screen and (max-width: 600px) {
-    #mainVideo {
-        width: 100%;
-    }
-  }
-
 
 table, th, td {
     border: 1px solid black;
@@ -31,18 +40,16 @@ table, th, td {
 
 }
 
+
+/*
+
+
 body {
     background-color: #404040;
 }
 
 p, a, h1, h2, h3, table{
     color: #F6008D;
-}
-
-table {
-    display: block;
-    height: 200px;
-    overflow-y: scroll;
 }
 
 button {
@@ -58,3 +65,4 @@ button:disabled {
 
     color: darkgrey;
 }
+*/
