--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,17 @@ td {
 td:last-child {
     border-right: none;
 }
+
+#videoControls {
+    text-align: center;
+}
+
+.verticalDivider {
+    border-left: 1px solid var(--color-text-placeholder);
+    margin-left: 8px;
+    padding-right: 9px;
+}
+
+#frameCounter {
+    float: left;
+}
