beginnings of data output

--- a/_includes/data.html
+++ b/_includes/data.html
@@ -6,11 +6,6 @@
         <button onclick="setTab('upload');" class="btn btn-primary my-3">Upload a video</button>
 
     </div>
-    <table id="dataTable">
-        <tr>
-            <th>Frame</th>
-            <th>X</th>
-            <th>Y</th>
-        </tr>
-    </table>
+    <div id="dataTableContainer">
+    </div>
 </section>
