--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,7 @@
     <p>
         Webtrack is still in alpha, so don't be surprised if you find a bug.
         If you do, do me a favour and report it on <a href="https://github.com/Pr0x1mas/webtrack/issues/new/choose">Github</a>.
+        <br>
+        Copyright © 2021 <a href="pr0x1mas.github.io">Pr0x1mas</a>.
     <p>
 </footer>
