--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="p-6">
     <p>
         Webtrack is still in alpha, so don't be surprised if you find a bug.
-        If you do, do me a favour and report it on <a href="https://github.com/Pr0x1mas/webtrack/issues/new/choose">Github</a>.
+        If you do, do me a favour and report it on <a href="https://github.com/jbritain/webtrack/issues/new/choose">Github</a>.
         <br>
-        Copyright © 2021 <a href="pr0x1mas.github.io">Pr0x1mas</a>.
+        Copyright © {{ "now" | date: "%Y" }} <a href="jbritain.github.io">Joshua Britain</a>.
     <p>
 </footer>
